<resources>
    <string name="app_name">SOPP</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="still_don_t_have_an_account_create_here">Still don\'t have an account? Create here</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="balance_text">Balance: %1$s</string>
</resources>